# ebpf_file_monitor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bpftool_CMakeLists.txt  libbpf_CMakeLists.txt
include/: bpf_loader.h  common.h  event_structs.h  logger.h  vmlinux.h
include/ebpf/: common_ebpf.h  event_structs_ebpf.h
include/user/: bpf_loader.h  common_user.h  event_structs_user.h  logger.h
patches/libbpf/: kernel_compat.patch
scripts/: apply_patches.sh  build.sh  check_kylin_headers.sh  init_project.sh  prepare.sh  run.sh
src/ebpf/: CMakeLists.txt  fd_map.bpf.c  file_monitor.bpf.c
src/user/: CMakeLists.txt  bpf_loader.cpp  logger.cpp  main.cpp  skeleton_wrapper.cpp
tests/: CMakeLists.txt  run_test.sh.in  test_basic.cpp
tests/test_docs/: test_content.txt
tools/: txt_generator.cpp
